// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The stripe disputes webhook API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuLambdaFunction",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "stripedisputeslambdaproducerstripedisputesCODEEndpoint830E2AB9": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowS3GetObjectonLambdaConsumerA5ED8431": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/CODE/stripe-disputes/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowS3GetObjectonLambdaConsumerA5ED8431",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowS3GetObjectonLambdaproducer72FA08FD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/CODE/stripe-disputes/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowS3GetObjectonLambdaproducer72FA08FD",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaConsumer4D5B27D1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaConsumer4D5B27D1",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaproducerC408E8FD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaproducerC408E8FD",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessagetoBrazeEmailsQueueonLambdaConsumerAE167DFA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:sendmessage",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sqs:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":braze-emails-CODE",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessagetoBrazeEmailsQueueonLambdaConsumerAE167DFA",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerGetSecretValueonLambdaConsumer2162ED59": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:secretsmanager:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":secret:CODE/Zuora-OAuth/SupportServiceLambdas-*",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:secretsmanager:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":secret:CODE/Salesforce/ConnectedApp/StripeDisputeWebhooks-*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerGetSecretValueonLambdaConsumer2162ED59",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
        "Stage": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "stripe-disputes.code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DeadLetterQueueAlarm48D9D867": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "There are one or more failed dispute webhook events in the stripe-disputes dead letter queue (DLQ). Check the attributes of the failed message(s) for details of the error and ensure the Stripe webhook processing is working correctly.
DLQ: https://",
              {
                "Ref": "AWS::Region",
              },
              ".console.aws.amazon.com/sqs/v2/home?region=",
              {
                "Ref": "AWS::Region",
              },
              "#/queues/https%3A%2F%2Fsqs.",
              {
                "Ref": "AWS::Region",
              },
              ".amazonaws.com%2F",
              {
                "Ref": "AWS::AccountId",
              },
              "%2F",
              {
                "Fn::GetAtt": [
                  "deadlettersstripedisputesqueueACC1EFEB",
                  "QueueName",
                ],
              },
            ],
          ],
        },
        "AlarmName": "CODE stripe-disputes - Failed to process dispute webhook",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersstripedisputesqueueACC1EFEB",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "stripe-disputes.code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "deadlettersstripedisputesqueueACC1EFEB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-stripe-disputes-queue-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeseventsqueueF268BDE0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "stripe-disputes-events-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersstripedisputesqueueACC1EFEB",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VisibilityTimeout": 300,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeslambdaconsumerD464502F": {
      "DependsOn": [
        "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "stripedisputeslambdaconsumerServiceRole234A464E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "App": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "stripe-disputes-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaconsumerServiceRole234A464E",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaconsumerServiceRole234A464E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaconsumerSqsEventSourcestripedisputesCODEstripedisputeseventsqueueD7FA3D4B5873E52E": {
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "stripedisputeseventsqueueF268BDE0",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "stripedisputeslambdaconsumerD464502F",
        },
        "MaximumBatchingWindowInSeconds": 0,
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "stripedisputeslambdaproducer13150932": {
      "DependsOn": [
        "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "stripedisputeslambdaproducerServiceRoleF01BBA32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes webhook events and processes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "App": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "stripe-disputes-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerServiceRoleF01BBA32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaproducerServiceRoleF01BBA32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaproducerstripedisputesCODEANY17FF6EA6": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesCODEANYApiPermissionTeststripedisputesCODEstripedisputeslambdaproducerstripedisputesCODE2A8F7CC7ANY57D5D53D": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesCODEANYApiPermissionstripedisputesCODEstripedisputeslambdaproducerstripedisputesCODE2A8F7CC7ANY683656C4": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesCODEAccountF7247D15": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesCODECloudWatchRoleC07F0314",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesCODECloudWatchRoleC07F0314": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesCODEDeployment2CF62E5E8a0efa0a004440fc9ade08616018285f": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesCODEproxyANY4F6D2A61",
        "stripedisputeslambdaproducerstripedisputesCODEproxy7EE73D25",
        "stripedisputeslambdaproducerstripedisputesCODEANY17FF6EA6",
      ],
      "Properties": {
        "Description": "API Gateway for Stripe dispute webhooks (sync response) with SQS event processing",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesCODEAccountF7247D15",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeployment2CF62E5E8a0efa0a004440fc9ade08616018285f",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway for Stripe dispute webhooks (sync response) with SQS event processing",
        "Name": "stripe-disputes-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "stripedisputeslambdaproducerstripedisputesCODEUsagePlan6CD6FF46": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
            },
            "Stage": {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for stripe disputes webhook api",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "stripe-disputes-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "stripedisputeslambdaproducerstripedisputesCODEUsagePlanUsagePlanKeyResourcestripedisputesCODEstripedisputeslambdaproducerstripedisputesCODEstripedisputeskeyCODE700159FFC2F6C6C5": {
      "Properties": {
        "KeyId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEstripedisputeskeyCODE5B612A20",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEUsagePlan6CD6FF46",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "stripedisputeslambdaproducerstripedisputesCODEproxy7EE73D25": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "stripedisputeslambdaproducerstripedisputesCODEproxyANY4F6D2A61": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEproxy7EE73D25",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesCODEproxyANYApiPermissionTeststripedisputesCODEstripedisputeslambdaproducerstripedisputesCODE2A8F7CC7ANYproxy559AA7CA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesCODEproxyANYApiPermissionstripedisputesCODEstripedisputeslambdaproducerstripedisputesCODE2A8F7CC7ANYproxy1397DCE7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesCODEstripedisputeskeyCODE5B612A20": {
      "Properties": {
        "Enabled": true,
        "Name": "stripe-disputes-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEF2CEBE4E",
            },
            "StageName": {
              "Ref": "stripedisputeslambdaproducerstripedisputesCODEDeploymentStageCODE23AD8470",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
  },
}
`;

exports[`The stripe disputes webhook API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuLambdaFunction",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "stripedisputeslambdaproducerstripedisputesPRODEndpoint63714358": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowS3GetObjectonLambdaConsumerA5ED8431": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/PROD/stripe-disputes/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowS3GetObjectonLambdaConsumerA5ED8431",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowS3GetObjectonLambdaproducer72FA08FD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/PROD/stripe-disputes/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowS3GetObjectonLambdaproducer72FA08FD",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaConsumer4D5B27D1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaConsumer4D5B27D1",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaproducerC408E8FD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueonLambdaproducerC408E8FD",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessagetoBrazeEmailsQueueonLambdaConsumerAE167DFA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:sendmessage",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sqs:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":braze-emails-PROD",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessagetoBrazeEmailsQueueonLambdaConsumerAE167DFA",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerGetSecretValueonLambdaConsumer2162ED59": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:secretsmanager:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":secret:PROD/Zuora-OAuth/SupportServiceLambdas-*",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:secretsmanager:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":secret:PROD/Salesforce/ConnectedApp/StripeDisputeWebhooks-*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerGetSecretValueonLambdaConsumer2162ED59",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
        "Stage": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "stripe-disputes.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DeadLetterQueueAlarm48D9D867": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "There are one or more failed dispute webhook events in the stripe-disputes dead letter queue (DLQ). Check the attributes of the failed message(s) for details of the error and ensure the Stripe webhook processing is working correctly.
DLQ: https://",
              {
                "Ref": "AWS::Region",
              },
              ".console.aws.amazon.com/sqs/v2/home?region=",
              {
                "Ref": "AWS::Region",
              },
              "#/queues/https%3A%2F%2Fsqs.",
              {
                "Ref": "AWS::Region",
              },
              ".amazonaws.com%2F",
              {
                "Ref": "AWS::AccountId",
              },
              "%2F",
              {
                "Fn::GetAtt": [
                  "deadlettersstripedisputesqueueACC1EFEB",
                  "QueueName",
                ],
              },
            ],
          ],
        },
        "AlarmName": "PROD stripe-disputes - Failed to process dispute webhook",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersstripedisputesqueueACC1EFEB",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "stripe-disputes.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "deadlettersstripedisputesqueueACC1EFEB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-stripe-disputes-queue-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeseventsqueueF268BDE0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "stripe-disputes-events-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersstripedisputesqueueACC1EFEB",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VisibilityTimeout": 300,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeslambdaconsumerD464502F": {
      "DependsOn": [
        "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "stripedisputeslambdaconsumerServiceRole234A464E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "App": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "stripe-disputes-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaconsumerServiceRole234A464E",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaconsumerServiceRole234A464E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaconsumerSqsEventSourcestripedisputesPRODstripedisputeseventsqueueE0B39D5B75C6D848": {
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "stripedisputeseventsqueueF268BDE0",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "stripedisputeslambdaconsumerD464502F",
        },
        "MaximumBatchingWindowInSeconds": 0,
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "stripedisputeslambdaproducer13150932": {
      "DependsOn": [
        "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "stripedisputeslambdaproducerServiceRoleF01BBA32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes webhook events and processes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "App": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "stripe-disputes-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerServiceRoleF01BBA32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaproducerServiceRoleF01BBA32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaproducerstripedisputesPROD219C9FA6": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway for Stripe dispute webhooks (sync response) with SQS event processing",
        "Name": "stripe-disputes-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "stripedisputeslambdaproducerstripedisputesPRODANY26C4B1AD": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesPRODANYApiPermissionTeststripedisputesPRODstripedisputeslambdaproducerstripedisputesPRODE75AA738ANYF104A283": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesPRODANYApiPermissionstripedisputesPRODstripedisputeslambdaproducerstripedisputesPRODE75AA738ANY131786B4": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesPRODAccount735CE561": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesPRODCloudWatchRole7FCEE40B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesPRODCloudWatchRole7FCEE40B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesPRODDeployment1B2FECC9ec8eeb8c58c6646bd1551f2761e10d4c": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesPRODproxyANYE20BAFBC",
        "stripedisputeslambdaproducerstripedisputesPRODproxyAE1A1225",
        "stripedisputeslambdaproducerstripedisputesPRODANY26C4B1AD",
      ],
      "Properties": {
        "Description": "API Gateway for Stripe dispute webhooks (sync response) with SQS event processing",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesPRODAccount735CE561",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeployment1B2FECC9ec8eeb8c58c6646bd1551f2761e10d4c",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "stripedisputeslambdaproducerstripedisputesPRODUsagePlan3EC269DC": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
            },
            "Stage": {
              "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for stripe disputes webhook api",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "stripe-disputes-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "stripedisputeslambdaproducerstripedisputesPRODUsagePlanUsagePlanKeyResourcestripedisputesPRODstripedisputeslambdaproducerstripedisputesPRODstripedisputeskeyPRODF487424C3DF8D8E6": {
      "Properties": {
        "KeyId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPRODstripedisputeskeyPROD22BCE238",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPRODUsagePlan3EC269DC",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "stripedisputeslambdaproducerstripedisputesPRODproxyAE1A1225": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "stripedisputeslambdaproducerstripedisputesPRODproxyANYApiPermissionTeststripedisputesPRODstripedisputeslambdaproducerstripedisputesPRODE75AA738ANYproxy7037A3DD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesPRODproxyANYApiPermissionstripedisputesPRODstripedisputeslambdaproducerstripedisputesPRODE75AA738ANYproxyF3F10798": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesPRODproxyANYE20BAFBC": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPRODproxyAE1A1225",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesPRODstripedisputeskeyPROD22BCE238": {
      "Properties": {
        "Enabled": true,
        "Name": "stripe-disputes-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "stripedisputeslambdaproducerstripedisputesPROD219C9FA6",
            },
            "StageName": {
              "Ref": "stripedisputeslambdaproducerstripedisputesPRODDeploymentStagePROD53ED83F7",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
  },
}
`;
